# ros2nix

./: .gitignore  Cargo.toml  cache.yaml  flake.nix  gen.sh  packages.json  ros2nix.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  cachix.yml
config/: 00_distro.toml
generator/: config.nims  flake.nix  packages.json  prefetch_cache.json
generator/src/: autopatcher.nim  conditioneval.nim  pkgjson.nim  prefetcher.nim  ros2nix.nim  semver.nim  types.nim
generator/src/templates/: distroRoot.nimja  package.nimja  pkgRoot.nimja
nix/: build-ros-package.nix  default.nix  main-overlay.nix  private-funcs.nix  setup-helper.nix  setup-hook.nix  system-packages-overlay.nix  wrap-ros-qt-apps-hook.nix  wrap-ros-qt-apps-hook.sh
nix/cli/: packages.nix
nix/common/: lib.nix  packages.nix  setup-hook.sh  wrap-gl-apps-hook.sh  wrap-qt-apps-hook-ros.sh
nix/humble/: lib.nix  packages.nix
nix/ignition/: packages.nix
nix/ignition/cmake/: 2.nix  default.nix  flake.nix
nix/ignition/common/: 4.nix
nix/ignition/fuel-tools/: 6.nix  default.nix
nix/ignition/math/: 6.nix  default.nix
nix/ignition/msgs/: 7.nix  default.nix
nix/ignition/plugin/: default.nix
nix/ignition/rendering/: default.nix
nix/ignition/utils/: 1.nix
nix/lib/: lib.nix
nix/outputs/: pkgs.nix
nix/overrides/: default.nix  jazzy.nix
nix/system-packages/: catkin-pkg.nix  flake8-builtins.nix  flake8-comprehensions.nix  flake8-quotes.nix  ignition.nix  lib.nix  misc.nix  nixpkgs.nix  rosdistro.nix  system-packages.nix
nix/system-packages/catkin/: default.nix
nix/system-packages/colcon/: argcomplete.nix  bash.nix  cd.nix  cmake.nix  common-extensions.nix  core.nix  ros.nix  (+16 more)
poetry/: pyproject.toml
ros2nix/: config.nims  nimble2nix.json  ros2nix.nimble
ros2nix/src/: autopatcher.nim  ci.nim  configs.nim  generator.nim  ghactions.nim  pkgjson.nim  prefetcher.nim  procutils.nim  ros2nix.nim  types.nim
scripts/: format_all.bash  format_check.bash
setup-helper/: Cargo.toml
setup-helper/src/: main.rs
setuphelper/: setuphelper.nimble
setuphelper/src/: setuphelper.nim
src/: autopatch.rs  ci.rs  condition.lalrpop  condition.rs  config.rs  deps.rs  generate.rs  main.rs  nixgen.rs  rosindex.rs  source.rs
(+15 files in other folders)
