[package]
name = "ros2nix"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
async-compression = { version = "0.4.11", features = ["futures-io", "gzip", "tokio"] }
env_logger = "0.11.3"
flate2 = "1.0.30"
futures = "0.3.30"
futures-io = "0.3.30"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
log = "0.4.22"
reqwest = "0.12.5"
roxmltree = "0.20.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-roxmltree = "0.8.1"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
yaml-rust2 = "0.8.1"

[build-dependencies]
lalrpop = "0.20.2"
