[package]
name = "ros2nix"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# [workspace]
# members = ["setup-helper"]

[dependencies]
anyhow = "1.0.86"
async-compression = { version = "0.4.11", features = [
  "futures-io",
  "gzip",
  "tokio",
] }
base64 = "0.22.1"
clap = { version = "4.5.11", features = ["derive"] }
flate2 = "1.0.30"
futures = "0.3.30"
futures-io = "0.3.30"
indenter = "0.3.3"
indicatif = "0.17.8"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
num_cpus = "1.16.0"
reqwest = "0.12.5"
roxmltree = "0.20.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-roxmltree = "0.8.1"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.14"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
yaml-rust2 = "0.8.1"

[build-dependencies]
lalrpop = "0.20.2"
